# docker-compose-ui-v2

./: .gitignore  Dockerfile  main.py  requirements.txt
.github/workflows/: docker-publish.yml
backend/: pyproject.toml
backend/docker_compose_ui/: __init__.py  app.py  bridge.py
docker_compose_ui/: app.py
examples/docker-compose-ui-nginx/: docker-compose.yml
frontend/: index.html  package.json
scripts/: bridge.py  find_files.py
static/: package-lock.json
