[project]
name = "docker-compose-ui"
version = "0.1.0"
requires-python = "==3.12.13"
dependencies = [
    # Versions pinned to match Alpine 3.23 system packages
    # In Docker these are installed via apk, this file is for local development only.
    "Flask==3.1.2",
    "Werkzeug==3.1.3",
    "docker==7.1.0",
    "requests==2.32.5",
    "gitpython==3.1.44",
]

[tool.uv]
package = false